--- a/src/app/Pages/sign-up/sign-up.component.html
+++ b/src/app/Pages/sign-up/sign-up.component.html
@@ -147,8 +147,37 @@
                             <h3 style="margin-top: 0px;">Phone Number</h3>
                             <input type="number" formControlName="phoneNumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f2.phoneNumber.errors }" style="border-color:black ; border-radius: 5px;"/>
                             <div *ngIf="submitted && f2.phoneNumber.errors" class="invalid-feedback">
-                                <div *ngIf="f2.phoneNumber.errors.required">Password is required</div>
-                                <div *ngIf="f2.phoneNumber.errors.minlength">Password must be at least 6 characters</div>
+                                <div *ngIf="f2.phoneNumber.errors.required">Number is required</div>
+                                <div *ngIf="f2.phoneNumber.errors.minlength">Number must be at least 6 characters</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-12" >
+                            <h3 style="margin-top: 0px;">County</h3>
+                            <select  (change)="countySelected()" [(ngModel)]="selectedCounty" formControlName="county" data-live-search="true" class="form-control" [ngClass]="{ 'is-invalid': submitted && f2.county.errors }" style="border-color:black ; border-radius: 5px;">
+                                <option *ngFor="let a of address" [ngValue]="a">{{a.county}}</option>
+                            </select>
+                            <div *ngIf="submitted && f2.county.errors" class="invalid-feedback">
+                                <div *ngIf="f2.county.errors.required">County is required</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-12" >
+                            <h3 style="margin-top: 0px;">Town</h3>
+                            <select  [(ngModel)]="selectedTown" formControlName="town" class="form-control" [ngClass]="{ 'is-invalid': submitted && f2.town.errors }" style="border-color:black ; border-radius: 5px;">
+                                <option *ngFor="let t of selectedCountyTowns" [ngValue]="t">{{t}}</option>
+                            </select>
+                            <div *ngIf="submitted && f2.town.errors" class="invalid-feedback">
+                                <div *ngIf="f2.town.errors.required">Town is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-12" >
+                            <h3 style="margin-top: 0px;">Eircode</h3>
+                            <input maxlength=7 type="text" formControlName="eircode" class="form-control" [ngClass]="{ 'is-invalid': submitted && f2.eircode.errors }" style="border-color:black ; border-radius: 5px;"/>
+                            <div *ngIf="submitted && f2.eircode.errors" class="invalid-feedback">
+                                <div *ngIf="f2.eircode.errors.required">Eircode is required</div>
+                                <div *ngIf="f2.eircode.errors.minlength">Eircode must be 7 characters</div>
+                                <div *ngIf="f2.eircode.errors.maxlength">Eircode must be 7 characters</div>
                             </div>
                         </div>
                     </div>
@@ -158,7 +187,7 @@
                     
                         <div class="form-group row">
                             <div class="col-12" style="justify-content: center;display: flex;text-align: center;">
-                                <button  [disabled]="loading" type="button"  class="btn btn-secondary cat-button" style="width:50vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
+                                <button  (click)="registerAsHome()" [disabled]="loading" type="button"  class="btn btn-secondary cat-button" style="width:50vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
                                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                     <label style="margin:7px" *ngIf="!loading">
                                         Register
@@ -288,8 +317,8 @@
                             <h3 style="margin-top: 0px;">Phone Number</h3>
                             <input type="number" formControlName="phoneNumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f4.phoneNumber.errors }" style="border-color:black ; border-radius: 5px;"/>
                             <div *ngIf="submitted && f4.phoneNumber.errors" class="invalid-feedback">
-                                <div *ngIf="f4.phoneNumber.errors.required">Password is required</div>
-                                <div *ngIf="f4.phoneNumber.errors.minlength">Password must be at least 6 characters</div>
+                                <div *ngIf="f4.phoneNumber.errors.required">Number is required</div>
+                                <div *ngIf="f4.phoneNumber.errors.minlength">Number must be at least 6 characters</div>
                             </div>
                         </div>
                     </div>
