added business part 2 signup flow

--- a/src/app/Pages/sign-up/sign-up.component.html
+++ b/src/app/Pages/sign-up/sign-up.component.html
@@ -145,10 +145,12 @@
                     <div class="form-row">
                         <div class="form-group col-12" >
                             <h3 style="margin-top: 0px;">Phone Number</h3>
-                            <input type="number" formControlName="phoneNumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f2.phoneNumber.errors }" style="border-color:black ; border-radius: 5px;"/>
+                            <input type="text" formControlName="phoneNumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f2.phoneNumber.errors }" style="border-color:black ; border-radius: 5px;" placeholder="e.g. 0851790666" maxlength="10"/>
                             <div *ngIf="submitted && f2.phoneNumber.errors" class="invalid-feedback">
                                 <div *ngIf="f2.phoneNumber.errors.required">Number is required</div>
-                                <div *ngIf="f2.phoneNumber.errors.minlength">Number must be at least 6 characters</div>
+                                <div *ngIf="f2.phoneNumber.errors.pattern">Digits Only</div>
+                                <div *ngIf="f2.phoneNumber.errors.minlength">Number must has 10 digits</div>
+                                <div *ngIf="f2.phoneNumber.errors.maxlength">Number must has 10 digits</div>
                             </div>
                         </div>
 
@@ -313,12 +315,54 @@
 
                             </div>
                         </div>
+
                         <div class="form-group col-12" >
                             <h3 style="margin-top: 0px;">Phone Number</h3>
-                            <input type="number" formControlName="phoneNumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f4.phoneNumber.errors }" style="border-color:black ; border-radius: 5px;"/>
+                            <input type="text" formControlName="phoneNumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f4.phoneNumber.errors }" style="border-color:black ; border-radius: 5px;" placeholder="e.g. 0851790666" maxlength="10"/>
                             <div *ngIf="submitted && f4.phoneNumber.errors" class="invalid-feedback">
                                 <div *ngIf="f4.phoneNumber.errors.required">Number is required</div>
-                                <div *ngIf="f4.phoneNumber.errors.minlength">Number must be at least 6 characters</div>
+                                <div *ngIf="f4.phoneNumber.errors.pattern">Digits Only</div>
+                                <div *ngIf="f4.phoneNumber.errors.minlength">Number must has 10 digits</div>
+                                <div *ngIf="f4.phoneNumber.errors.maxlength">Number must has 10 digits</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-12" >
+                            <h3 style="margin-top: 0px;">Your Services</h3>
+                            <select  (change)="serviceSelected()" [(ngModel)]="selectedServices" formControlName="services" data-live-search="true" class="form-control" [ngClass]="{ 'is-invalid': submitted && f4.services.errors }" style="border-color:black ; border-radius: 5px;">
+                                <option *ngFor="let s of services" [ngValue]="s">{{s}}</option>
+                            </select>
+                            <div *ngIf="submitted && f4.services.errors" class="invalid-feedback">
+                                <div *ngIf="f4.services.errors.required">County is required</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-12" >
+                            <h3 style="margin-top: 0px;">County</h3>
+                            <select  (change)="countySelected()" [(ngModel)]="selectedCounty" formControlName="county" data-live-search="true" class="form-control" [ngClass]="{ 'is-invalid': submitted && f4.county.errors }" style="border-color:black ; border-radius: 5px;">
+                                <option *ngFor="let a of address" [ngValue]="a">{{a.county}}</option>
+                            </select>
+                            <div *ngIf="submitted && f4.county.errors" class="invalid-feedback">
+                                <div *ngIf="f4.county.errors.required">County is required</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-12" >
+                            <h3 style="margin-top: 0px;">Town</h3>
+                            <select  [(ngModel)]="selectedTown" formControlName="town" class="form-control" [ngClass]="{ 'is-invalid': submitted && f4.town.errors }" style="border-color:black ; border-radius: 5px;">
+                                <option *ngFor="let t of selectedCountyTowns" [ngValue]="t">{{t}}</option>
+                            </select>
+                            <div *ngIf="submitted && f4.town.errors" class="invalid-feedback">
+                                <div *ngIf="f4.town.errors.required">Town is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-12" >
+                            <h3 style="margin-top: 0px;">Eircode</h3>
+                            <input maxlength=7 type="text" formControlName="eircode" class="form-control" [ngClass]="{ 'is-invalid': submitted && f4.eircode.errors }" style="border-color:black ; border-radius: 5px;"/>
+                            <div *ngIf="submitted && f4.eircode.errors" class="invalid-feedback">
+                                <div *ngIf="f4.eircode.errors.required">Eircode is required</div>
+                                <div *ngIf="f4.eircode.errors.minlength">Eircode must be 7 characters</div>
+                                <div *ngIf="f4.eircode.errors.maxlength">Eircode must be 7 characters</div>
                             </div>
                         </div>
                     </div>
